--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 </head>
 <body>
   <header>
-    <h1>        Estudiante:</h1>
-    <h1>Rafael Deymar Villca Escobar</h1>
+    <h1>        Estudiantes:</h1>
+    <h1>Rafael Deymar Villca Escobar <br>
+        Nicol Dania Cardenas Choquue <br>
+        Bryan Adhemar Angles Gutierrez<br>
+    </h1>
     <img src="img/team.jpg" alt="My Profile Picture">
   </header> 
   <main>
     <h2>Diseño Web - Portal de Asignaciones</h2>
     <ul>
-      <li> Practica 1:<a href="Practica1 Rafael Escobar TW1.pdf">Servidor Web </a></li> 
-      <li>Practica 2:<a href="css/ejemplo/index.html">Layout</a></li>
+      <li> Primera Parte:<a href="Proyecto.html">Servidor Web </a></li> 
+
       
     </ul>
     
