--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Tecnologia Web I - Proyecto final | Nombre | UPDS -Cbba.</title>
   <meta name="description" content="Pagina de portal de asignaciones Fabiola Soliz para la materia de tecnologia web en UPDS">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -18,7 +17,7 @@
     <img src="img/team.jpg" alt="My Profile Picture">
   </header> 
   <main>
-    <h2>Diseño Web - Portal de Asignaciones</h2>
+    <h2>Proyecto final</h2>
     <ul>
       <li> Primera Parte:<a href="Proyecto.html">Servidor Web </a></li> 
 
