--- a/index.html
+++ b/index.html
@@ -25,7 +25,25 @@
     </ul>
     
   </main> 
- 
+  <aside>
+    <section class="aside1">
+        <h3>Aprende desde cero</h3>          
+       <hr>
+       
+            <ul class="enlaces">
+            <img src="img/libro1.jpg" alt="My Profile Picture">
+            <li><a href="#">El gran libro de HTML5</a></li>
+            <img src="img/libro2.jpg" alt="My Profile Picture">
+            <li><a href="#">El gran libro de php</a></li>
+            <img src="img/libro4.jpg" alt="My Profile Picture">
+            <li><a href="#">SQL facil</a></li>
+            <img src="img/libro5.jpg" alt="My Profile Picture">
+            <li><a href="#">BBDD Relacionales</a></li>
+
+        </ul>
+    </section>
+</aside>
+
   <footer>
     <p>
       &copy;2022 Rafael Deymar - Location: Bolivia  
