--- a/Proyecto.html
+++ b/Proyecto.html
@@ -85,13 +85,13 @@
                
                     <ul class="enlaces">
                     <img src="img/libro1.jpg" alt="My Profile Picture">
-                    <li><a href="#">El gran libro de HTML5</a></li>
+                    <li><a href="https://www.amazon.es/gran-libro-HTML5-JavaScript-Edici%C3%B3n/dp/8426724639/ref=as_li_ss_tl?&linkCode=sl1&tag=2101e0-21&linkId=15e76b60059614e1d5c732a04f136f97&language=es_ES">El gran libro de HTML5</a></li>
                     <img src="img/libro2.jpg" alt="My Profile Picture">
-                    <li><a href="#">El gran libro de php</a></li>
+                    <li><a href="https://www.amazon.es/Gran-Libro-Creaci%C3%B3n-Paginas-Din%C3%A1micas/dp/8426722733/ref=as_li_ss_tl?&linkCode=sl1&tag=2101e0-21&linkId=1994a618c42903d0adc6398689423a24&language=es_ES">El gran libro de php</a></li>
                     <img src="img/libro4.jpg" alt="My Profile Picture">
-                    <li><a href="#">SQL facil</a></li>
+                    <li><a href="https://www.amazon.es/SQL-F%C3%A1cil-PERE-CHARDI-GARC%C3%8DA/dp/8426721001/ref=as_li_ss_tl?&linkCode=sl1&tag=2101e0-21&linkId=7090c46240654258b2b82f476fc379aa&language=es_ES">SQL facil</a></li>
                     <img src="img/libro5.jpg" alt="My Profile Picture">
-                    <li><a href="#">BBDD Relacionales</a></li>
+                    <li><a href="https://www.amazon.es/Introducci%C3%B3n-datos-modelo-relacional-Inform%C3%A1tica/dp/8497323963/ref=as_li_ss_tl?&linkCode=sl1&tag=2101e0-21&linkId=de853e01a08a0bea7bf2b9c9f278ed19&language=es_ES">BBDD Relacionales</a></li>
         
                 </ul>
             </section>
