--- a/Bibliografia.html
+++ b/Bibliografia.html
@@ -1,5 +1,17 @@
-<p>https://blog.infranetworking.com/modelo-cliente-servidor/</p>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>https://blog.infranetworking.com/modelo-cliente-servidor/</p>
 <p>http://mialtoweb.es/introduccion-a-la-arquitectura-cliente-servidor-1/</p>
 <p>https://www.ecured.cu/Arquitectura_Cliente_Servidor</p>
 <p></p>
 <p></p>
+</body>
+</html>
