--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <main>
     <h2>Proyecto final</h2>
     <ul>
-      <li> Primera Parte:<a href="Proyecto.html">Servidor Web </a></li> 
-
+      <li> Primera Parte:<a href="Proyecto.html">HTML </a></li> 
+      <li> Segunda Parte:<a href="Proyecto1.html">CSS Web </a></li>
       
     </ul>
     
