--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <ul>
       <li> Primera Parte:<a href="Proyecto.html">HTML </a></li> 
       <li> Segunda Parte:<a href="Proyecto1.html">CSS Web </a></li>
-      
+      <li> Inform: <a href="InformeProyecto.pdf"> INFORME </a></li>
     </ul>
     
   </main> 
