--- a/Proyecto1.html
+++ b/Proyecto1.html
@@ -43,7 +43,7 @@
                                     
                                 </ul>
                             </li>
-                            <li><a href="#">Informe</a>
+                            <li><a href="InformeProyectoF.pdf">Informe</a>
                                 <ul>
                                     <li><a href="Bibliografia.html">Bibliografía</a></li>
                                    
